# sdl3-demo-game

./: .gitignore  CMakeLists.txt  SETUP.md  build.ps1  exec.ps1
assets/: character.json
assets/credits/: credits.csv  credits.txt  metadata.json
src/: animation.h  gameobject.h  main.cpp  timer.h
